<resources>
    <string name="app_name" translatable="false">ProCampo</string>
    <string name="texto_bienvenida">Bienvenido a ProCampo</string>
    <string name="descripcion_bienvenida">Inicie sesión o registrese para poder disfrutar de la aplicación en su movil o tablet</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="texto_boton_registro">Registrar en ProCampo</string>
    <string name="cancelar">Cancelar</string>
    <string name="campo_vacio">Revise los campos del formulario</string>
    <string name="registro_ok">El registro se ha realizado correctamente</string>
    <string name="registro_nook">El registro ha fallado, intentelo de nuevo.</string>
    <string name="doble_usuario_error">El usuario ya existe en ProCampo</string>
    <string name="login_email_pass">Inicio de sesión</string>
    <string name="acceso">"Acceder "</string>
    <string name="login_other">O bien inicie sesión con...</string>
    <string name="login_ok">Logueado correctamente</string>
    <string name="login_nook">No se ha podido loguear correctamente</string>
    <string name="reset_pass">Restablecer contraseña</string>
    <string name="des_reset_pass">Introduzca el correo con el que este registrado en ProCampo, a continuación recibirá un correo a su e-mail donde se le guiara para restablecer su contraseña.</string>
    <string name="ok_reset_pass">Correo enviado correctamente, revise su e-mail</string>
    <string name="nook_reset_pass">No hemos podido mandar el correo</string>
    <string name="ivan" translatable="false">SA PODIO</string>

    <string name="facebook_app_id">510815139593835</string>
    <string name="fb_login_protocol_scheme">fb510815139593835</string>
    <string name="login_cancelado">Se ha cancelado el login</string>
    <string name="cultivos">Mis Cultivos</string>
    <string name="recolectas">Mis Recolectas</string>
    <string name="podas">Mis Podas</string>
    <string name="sulfatos">Mis Sulfatos</string>
    <string name="perfil">Mi Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="fertilizantes">Fertilizantes </string>
    <string name="opciones">Opciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Inicio</string>
    <string name="nuevo_cultivo">Añadir Nuevo Cultivo</string>
    <string name="des_nuevo_cultivo">Inserte datos para poder agregar un nuevo cultivo</string>
    <string name="nombre_cultivo">Nombre del Cultivo</string>
    <string name="hectareas_cultivo">Hectáreas del cultivo</string>
    <string name="localizacion_cultivo">Localización del cultivo</string>
    <string name="validacionCampos">Revise los campos</string>
    <string name="fitosanitarios">Fitosanitarios</string>
    <string name="actualizar_cultivo">Actualizar cultivo</string>
    <string name="actualizar_cultivo_des">Actualice aquí los datos de su cultivo</string>
    <string name="eliminar_cultivo">Eliminar cultivo</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="entrar_en_procampo">Entrar en ProCampo</string>
    <string name="registro_en_procampo">Registro en ProCampo</string>
    <string name="olvido_contra">¿Has olvidado la contraseña?</string>
    <string name="wel_1">En ProCampo podrá despreocuparse de tener que apuntar todo en papel; le ayudamos a llevar más eficientemente su olivar.</string>
    <string name="wel_2">Explore por el menú lateral para descubrir todas las funciones de ProCampo</string>
    <string name="wel_3">Tambien eche un vistazo a todo lo que ProCampo puede hacer por ti ⏬</string>
    <string name="gestione_cultivos">Gestione sus cultivos</string>
    <string name="gestione_cultivos_des">Con ProCampo podrá tener todos sus cultivos almacenados y accesibles</string>
    <string name="gestione_recolecta">Control en sus recolectas</string>
    <string name="gestione_recolecta_des">Podrá saber los días que cogio aceitunas, además de tener accesible el DAT y vale de la cooperativa</string>
    <string name="gestione_poda">Las podas, siempre agrupadas</string>
    <string name="gestione_poda_des">Esta función le permitirá recordar siempre cuando podo sus olivos y llevar un control total</string>
    <string name="gestione_sulfatos">Sulfatos puntuales y bien</string>
    <string name="gestione_sulfatos_des">Podrás saber que tratamientos aplicaste hace años y volver a aplicarlos o cambiar de tratamiento</string>
    <string name="gestione_ferti">Conoce más los productos</string>
    <string name="gestione_ferti_des">Con ProCampo obtendras toda la información relacionada con fitosanitarios y fertilizantes</string>
    <string name="adios_papeleo">Adiós al papeleo</string>
    <string name="adios_papeleo_des">Te permitimos registrar los jornales diarios que des para así poder olvidarte de los papeles</string>
    <string name="info_trat">Información tratamiento</string>
    <string name="fito">Fitosanitarios</string>
    <string name="control_diario">Control diario</string>
    <string name="jornales">Jornales</string>
    <string name="MIS_CULTIVOS">MIS CULTIVOS</string>
    <string name="anadir_cultivos">Añadir Cultivo</string>
    <string name="MIS_RECOLECTAS">MIS RECOLECTAS</string>
    <string name="anadir_recol">Añadir Recolecta</string>
    <string name="act_recolecta">Actualizar recolecta</string>
    <string name="del_recol">Eliminar recolecta</string>
    <string name="anadir_dat">Añadir foto registro del DAT</string>
    <string name="foto_vale">Foto del vale</string>
    <string name="MIS_PODAS">MIS PODAS</string>
    <string name="anadir_poda">Añadir Poda</string>
    <string name="act_poda">Actualizar Poda</string>
    <string name="del_poda">Eliminar Poda</string>
    <string name="cultivo_regis">Cultivo registrado con el código:</string>
    <string name="act_cultivos">Actualizar cultivo</string>
    <string name="confi_borrar">CONFIRMACIÓN DE BORRADO</string>
    <string name="quiere_eli_cultivo">¿Quiere eliminar el cultivo</string>
    <string name="si">Sí</string>
    <string name="des_act_recol">Actualice aquí los datos de la recolecta</string>
    <string name="recolecta_reg">Recolecta registrada con el código:</string>
    <string name="FECHA">FECHA</string>
    <string name="fec_recol">Fecha de la recolecta</string>
    <string name="kilos_recol">Kilos de la recolecta</string>
    <string name="quiere_eli_re">¿Quiere eliminar la recolecta en el cultivo</string>
    <string name="with_date">con fecha</string>
    <string name="foto_vale_des">Añada o visualice la imagen del vale obtenido en la cooperativa</string>
    <string name="selec_img">Seleccionar imagen</string>
    <string name="an_nu_re">Añadir Nueva Recolecta</string>
    <string name="des_nue_rec">Inserte datos para poder añadir una nueva recolecta</string>
    <string name="DATE">FECHA</string>
    <string name="new_recol">Añadir nueva recolecta</string>
    <string name="new_poda">Añadir Nueva Poda</string>
    <string name="new_poda_des">Inserte datos para poder añadir una nueva poda</string>
    <string name="fec_pod">Fecha de la poda</string>
    <string name="act_pod_des">Actualice aquí los datos de la poda</string>
    <string name="pod_reg">Poda registrada con el código:</string>
    <string name="MIS_SULFATOS">MIS SULFATOS</string>
    <string name="annadir_sulfato">Añadir nuevo sulfato</string>
    <string name="act_sul">Actualizar sulfato</string>
    <string name="des_act_sul">Modifique los datos del sulfato aquí</string>
    <string name="sulfato_reg">Sulfato registrado con el código:</string>
    <string name="an_nu_su">Añadir Nuevo Sulfato</string>
    <string name="des_nue_sul">Inserte datos para registrar un sulfato</string>
    <string name="fec_sul">Fecha del sulfato</string>
    <string name="trat_sul">Tratamiento del sulfato</string>
    <string name="eliminar_sul">Eliminar el sulfato</string>
    <string name="fertilizantesyFito">Fertilizantes y Fitosanitarios</string>
    <string name="info_su">Info sobre los sulfatos</string>
    <string name="des_fer">Bienvenido a la tienda online de ProCampo, añada los productos a la cesta y compre</string>
    <string name="mi_cart">Ver mi carrito</string>
    <string name="pago_aprobado">Pago aprobado</string>
    <string name="info_pago">En breve recibira sus productos. Muchas gracias por confiar en ProCampo</string>
    <string name="compartir">Te recomiendo ProCampo para organizar tu olivar mejor</string>
    <string name="foto_dat">Foto del DAT</string>
    <string name="foto_dat_des">Añada o visualice la fotografia del Documento de Acreditación al Transporte</string>
    <string name="tienda_virtual">Tienda Virtual</string>
    <string name="recordatorios">Recordatorios</string>

    <string name="record_des">Despeje su mente y deje que ProCampo le ayude a recordar su proxima tarea</string>
    <string name="select_day">Seleccione un día</string>
    <string name="dia_Sele">Día Seleccionado</string>
    <string name="select_hora">Seleccione una hora</string>
    <string name="hour_selec">Hora seleccionada</string>
    <string name="dato">Nombre del recordatorio</string>
    <string name="guardar">Guardar Recordatorio</string>
    <string name="eliminar_re">Eliminar recordatorio</string>
    <string name="p_cultivos">Cultivos</string>
    <string name="p_recolectas">Recolectas</string>
    <string name="p_podas">Podas</string>
    <string name="p_sulfatos">Sulfatos</string>
    <string name="funcionalidades">Funcionalidades</string>
    <string name="volver">Volver a ProCampo</string>


</resources>
